# MelonEngine

./: .gitignore  CMakeLists.txt  MelonEngine.cpp  MelonEngine.h  MelonEngine.sln  MelonEngine.vcxproj  MelonEngine.vcxproj.filters  README.md
Include/: Console.h  InputManager.h
include/: VertexBuffer.h  camera.h  mesh.h  renderer.h  scene.h  shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Application.cpp  Console.cpp  InputManager.cpp  VertexBuffer.cpp  camera.cpp  main.cpp  renderer.cpp  shader.cpp
